# cpp-fft-fscr

./: CMakeLists.txt  README.md
example_project/: CMakeLists.txt  README.md  main.cpp
include/: fft-fscr.hpp  matrix.hpp
tests/: CMakeLists.txt  fft.cpp  matrix.cpp
